<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhotoShare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_search">search</string>
    <string name="menu_update">update</string>
    <string name="username">User Name:</string>
    <string name="password">Password:</string>
    <string name="confirmPsw">Confirmation:</string>
    <string name="nickname">Nick Name:</string>
    <string name="register">Register</string>
    <string name="signin">Sign in</string>
    <string name="fileopt">File Operations</string>
    <string name="usernamehint">Type in a user name</string>
    <string name="passwordhint">Type in password</string>
    <string name="passcomhint">Type in password again</string>
    <string name="nicknamehint">Type in nick name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="confirmmsg">Are you sure to continue?</string>
	<string name="photoComments">Comments:</string>
	<string name="OK">OK</string>
	<string name="skip">Skip</string>
	<string name="photoTitle">Photo Title:</string>
	<string name="Setting">Settings</string>
	<string name="search_hint">Type to search</string>
    <string name="search_result">Search Results</string>
    <string name="menu_item_clear_memory_cache">clear memory cache</string>
    <string name="menu_item_clear_disc_cache">clear disc cache</string>
    <string name="descr_image">pager</string>
    
</resources>