<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

	<item 
	    android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/search_icons"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />
	<item 
	    android:id="@+id/menu_update"
	    android:title="@string/menu_update"
	    android:icon="@drawable/update_icons"
	    android:showAsAction="ifRoom"  />
	    
	<item
        android:id="@+id/item_clear_memory_cache"
        android:title="@string/menu_item_clear_memory_cache"/>
    <item
        android:id="@+id/item_clear_disc_cache"
        android:title="@string/menu_item_clear_disc_cache"/>
	    

</menu>