<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    >"
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        
        <TextView 
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_weight="300" />
        
        <EditText
            android:id="@+id/txtUserName" 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="100"
        />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        
        <TextView 
            android:id="@+id/tvUserPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_weight="300" />
        
        <EditText
            android:id="@+id/txtPassword" 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="100"
        	android:inputType="textPassword"
        />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        >
        
        <Button 
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_weight="200" />
        
        <Button
            android:id="@+id/btn_signin" 
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/signin"
        	android:layout_weight="200"
        	/>
        
    </LinearLayout>"

</LinearLayout>