<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >
        
        <TextView 
            android:id="@+id/tvRegUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_weight="250" />
        
        <EditText
            android:id="@+id/txtRegUserName" 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="100"
        />

	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >
        
        <TextView 
            android:id="@+id/tvRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_weight="250" />
        
        <EditText
            android:id="@+id/txtRegPassword" 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="100"
        	android:inputType="textPassword"
        />

	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >
        
        <TextView
            android:id="@+id/tvRegConfirmPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmPsw" 
            android:layout_weight="250" />
        
        <EditText
            android:id="@+id/txtRegConfirmPsw" 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="100"
        	android:inputType="textPassword"
        />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >
        
        <TextView 
            android:id="@+id/tvRegNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:layout_weight="250" />
        
        <EditText
            android:id="@+id/txtRegNickName" 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="100"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        >
        <Button 
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            />
        
    </LinearLayout>
    
</LinearLayout>